feat: implement canvas v1 backend domain